Clarified exercise descriptions

--- a/basics.ipynb
+++ b/basics.ipynb
@@ -1080,7 +1080,7 @@
     "\n",
     "Let us consider throwing two dice. (A dice can give a value between 1 and 6.) Use two nested `for`\n",
     "loops in the `main` function to iterate through all possible combinations the pair of dice can give. \n",
-    "There are 36 possible combinations. Print all those combinations as pairs that sum to 5. \n",
+    "There are 36 possible combinations. Print all those combinations as (ordered) pairs that sum to 5. \n",
     "For example, your printout should include the pair `(2,3)`. Print one pair per line.\n",
     "<hr/>"
    ]
@@ -1554,11 +1554,13 @@
     "\n",
     "Create a program that can compute the areas of three shapes, triangles, rectangles and circles, when\n",
     "their dimensions are given.\n",
-    "An endless loop should ask for which shape you want the area be calculated. If the user gives a\n",
+    "\n",
+    "An endless loop should ask for which shape you want the area be calculated. An empty string as input will exit the loop. \n",
+    "If the user gives a\n",
     "string that is none of the given shapes, the message “unknown shape!” should be printed.\n",
-    "An empty string will exit the loop.\n",
     "Then it will ask for dimensions for that particular shape. When all the necessary dimensions are\n",
-    "given, it prints the area, and starts the loop all over again. Use format specifier \"%f\" for the radius.\n",
+    "given, it prints the area, and starts the loop all over again. Use format specifier \"%f\" for the area.\n",
+    "\n",
     "What happens if you give incorrect dimensions, like giving string \"aa\" as radius? You don't have to check for errors in the input.\n",
     "\n",
     "Example interaction:\n",
@@ -2569,11 +2571,11 @@
     "[\"piilottaa\", \"salata\"]\n",
     "```\n",
     "\n",
-    "Make a function `reverse_dictionary` that creates a Finnish to English dictionary based on a English to Finnish dictionary given as a parameter. It should work like this:\n",
+    "Make a function `reverse_dictionary` that creates a Finnish to English dictionary based on a English to Finnish dictionary given as a parameter. The values of the created dictionary should be lists of words. It should work like this:\n",
     "```\n",
-    "d={\"move\":[\"liikuttaa\"], \"hide\":[\"piilottaa\", \"salata\"]}\n",
+    "d={'move': ['liikuttaa'], 'hide': ['piilottaa', 'salata'], 'six': ['kuusi'], 'fir': ['kuusi']}\n",
     "reverse_dictionary(d)\n",
-    "{’liikuttaa’: [’move’], ’salata’: [’hide’], ’piilottaa’: [’hide’]}\n",
+    "{'liikuttaa': ['move'], 'piilottaa': ['hide'], 'salata': ['hide'], 'kuusi': ['six', 'fir']}\n",
     "```\n",
     "\n",
     "Be careful with synonyms and homonyms!\n",
@@ -2790,7 +2792,7 @@
    "source": [
     "#### <div class=\"alert alert-info\">Exercise 15 (two dice comprehension)</div>\n",
     "\n",
-    "Redo the earlier exercise which printed all the pairs of two dice results that sum to 5. But this time use a list comprehension.\n",
+    "Redo the earlier exercise which printed all the pairs of two dice results that sum to 5. But this time use a list comprehension. Print one pair per line.\n",
     "<hr/>"
    ]
   },
