--- a/basics2.ipynb
+++ b/basics2.ipynb
@@ -822,7 +822,7 @@
     "$\\sqrt{\\frac{\\sum_{i=1}^n (x_i - \\overline x)^2}{n-1}}$,\n",
     "where $\\overline x$ is the average. Use the `math.sqrt` function from the `math` module in your solution.\n",
     "\n",
-    "The `main` function should call the function summary for each filename in the list `sys.argv[1:]` of command line parameters.\n",
+    "The `main` function should call the function summary for each filename in the list `sys.argv[1:]` of command line parameters. (Skip `sys.argv[0]` since it contains the name of the current program.)\n",
     "\n",
     "Example of usage from the command line:\n",
     "`python3 src/summary.py src/example.txt src/example2.txt`\n",
@@ -830,7 +830,7 @@
     "`python3 summary.py example.txt example2.txt`\n",
     "if you are in the folder src.\n",
     "\n",
-    "The output should look like this:\n",
+    "Print floating point numbers using six decimals precision. The output should look like this:\n",
     "```\n",
     "File: src/example.txt Sum: 51.400000 Average: 10.280000 Stddev: 8.904606\n",
     "File: src/example2.txt Sum: 5446.200000 Average: 1815.400000 Stddev: 3124.294045\n",
@@ -860,16 +860,16 @@
     "\n",
     "Part 1.\n",
     "\n",
-    "Create a function `file_count` that gets a filename as parameter and returns a triple of numbers. The function should read the file, count the number of lines, words, and characters in the file, and return a triple with these count in this order. You get division into words by splitting at whitespace. Yyou don't have to remove punctuation.\n",
+    "Create a function `file_count` that gets a filename as parameter and returns a triple of numbers. The function should read the file, count the number of lines, words, and characters in the file, and return a triple with these count in this order. You get division into words by splitting at whitespace. You don't have to remove punctuation.\n",
     "\n",
     "Part 2.\n",
     "\n",
-    "Create a main function that calls `file_count` for each filename in the list of command line parameters sys.argv[1:].\n",
+    "Create a main function that in a loop calls `file_count` using each filename in the list of command line parameters `sys.argv[1:]` as a parameter, in turn.\n",
     "For call `python3 src/file_count file1 file2 ...`\n",
     "the output should be\n",
     "```\n",
     "?      ?       ?       file1\n",
-    "?      ?       ?       file1\n",
+    "?      ?       ?       file2\n",
     "...\n",
     "```\n",
     "The fields are separated by tabs (`\\t`). The fields are in order: linecount, wordcount, charactercount, filename.\n",
@@ -906,7 +906,8 @@
     "\n",
     "Part 2.\n",
     "\n",
-    "Write a `main` method that calls the `file_extensions` function with \"src/filenames.txt\" as the argument. Then output a line for each extension with the number of files with that extension.\n",
+    "Write a `main` method that calls the `file_extensions` function with \"src/filenames.txt\" as the argument. Then print the results so that for each extension there is a line consisting of the extension and the number of files with that extension. The first line of the output should give the number of files without extensions.\n",
+    "\n",
     "With the example in part 1, the output should be\n",
     "```\n",
     "1 files with no extension\n",
