Told about current student number practise

--- a/instructions.ipynb
+++ b/instructions.ipynb
@@ -61,7 +61,9 @@
     "\n",
     "* Go to the [exercise page](https://tmc.mooc.fi/org/hy/courses/438) of the course\n",
     "* If you don't already have an account on this server, press the signup button\n",
-    "* Use your student number as the organizational id if you want to get credits from this course\n",
+    "* Use your student number as the organizational id, if you want to get credits from this course.\n",
+    "  Note for old-timers: it is not enough, that you have your student number as your user name in TMC, \n",
+    "  in fact, that is not even recommended anymore.\n",
     "* Choose organization Helsingin yliopisto\n",
     "* Choose course Data Analysis with Python Spring 2019"
    ]
