Improved exercise descriptions

--- a/image_processing.ipynb
+++ b/image_processing.ipynb
@@ -126,7 +126,7 @@
     "\n",
     "Part 1.\n",
     "\n",
-    "Write a function `to_grayscale` that takes an RGB image (three dimensional array) and returns a two dimensional gray-scale image. The conversion to gray-scale should take a weighted  average of the red, green, and blue values and use that as the value of gray. The first axis is the x, the second is y, and the third is the color components (red, green, blue).\n",
+    "Write a function `to_grayscale` that takes an RGB image (three dimensional array) and returns a two dimensional gray-scale image. The conversion to gray-scale should take a weighted sum of the red, green, and blue values, and use that as the value of gray. The first axis is the x, the second is y, and the third is the color components (red, green, blue).\n",
     "Use the weights 0.2126, 0.7152, and 0.0722 for red, green, and blue, respectively. These weights are so because the human eye is most sensitive to green color and least sensitive to blue color.\n",
     "\n",
     "In the main function you can, for example, use the provided image `src/painting.png`. Display the grayscale image with the `plt.imshow` function. You may have to call the function `plt.gray` to set the color palette (colormap) to gray.\n",
