--- a/numpy2.ipynb
+++ b/numpy2.ipynb
@@ -237,6 +237,13 @@
     "\n",
     "Write function `first_half_second_half` that gets a two dimensional array of shape `(n,2*m)` as a parameter. The input array has `2*m` columns. The output from the function should be a matrix with those rows from the input that have the sum of the first `m` elements larger than the sum of the last `m` elements on the row. Your solution should call the `np.sum` function or the corresponding method exactly twice.\n",
     "\n",
+    "Example of usage:\n",
+    "```python\n",
+    "a = np.array([[1, 3, 4, 2],\n",
+    "              [2, 2, 1, 2]])\n",
+    "first_half_second_half(a)\n",
+    "array([[2, 2, 1, 2]])\n",
+    "```\n",
     "<hr/>"
    ]
   },
@@ -714,6 +721,11 @@
     "#### <div class=\"alert alert-info\">Exercise 6 (meeting lines)</div>\n",
     "\n",
     "Write function `meeting_lines` that gets the coefficients of two lines as parameters and returns the point where the two lines meet. The equations for the lines are $y=a_1x + b_1$ and $y=a_2x + b_2$. Use the `np.linalg.solve` function. Create a main function to test your solution.\n",
+    "\n",
+    "Example of usage:\n",
+    "```\n",
+    "y, x = meeting_lines(a1, b1, a2, b2)\n",
+    "```\n",
     "<hr/>"
    ]
   },
@@ -727,6 +739,10 @@
     "$z =a_2y + b_2x+ c_2$, and\n",
     "$z =a_3y + b_3x+ c_3$.\n",
     "\n",
+    "Example of usage:\n",
+    "```\n",
+    "z, y, x = meeting_planes(a1, b1, c1,  a2, b2, c2,  a3, b3, c3)\n",
+    "```\n",
     "<hr/>"
    ]
   },
