--- a/pandas2.ipynb
+++ b/pandas2.ipynb
@@ -312,9 +312,9 @@
    "source": [
     "#### <div class=\"alert alert-info\">Exercise 3 (municipal information)</div>\n",
     "\n",
-    "In the `main` function load a data set of municipal information from the src folder (originally from [Statistics Finland](https://pxnet2.stat.fi/PXWeb/pxweb/en/)). Use the function `pd.read_csv`, and note that the separator is a tabulator.\n",
+    "In the `main` function load a data set of municipal information from the `src` folder (originally from [Statistics Finland](https://pxnet2.stat.fi/PXWeb/pxweb/en/)). Use the function `pd.read_csv`, and note that the separator is a tabulator.\n",
     "\n",
-    "Print the shape of the DataFrame and the column names in the following format:\n",
+    "Print the shape of the DataFrame (number of rows and columns) and the column names in the following format:\n",
     "```\n",
     "Shape: r,c\n",
     "Columns:\n",
@@ -884,6 +884,10 @@
     "Hint. First create the last week's top40 list of those songs that are also on this week's list. Then add those entries that were not on this week's list. Finally sort by position.\n",
     "\n",
     "Hint 2. The `where` method of Series and DataFrame can be useful. It can also be nested.\n",
+    "\n",
+    "Hint 3. Like in NumPy, you can use with Pandas the bitwise operators `&`, `|`, and `~`.\n",
+    "Remember that he bitwise operators have higher precedence than the comparison operations, so you may\n",
+    "have to use parentheses around comparisons, if you combined result of comparisons with bitwise operators.\n",
     "\n",
     "You get a second point, if you get the columns `LW` and `Peak Pos` correct.\n",
     "\n",
