--- a/bayes.ipynb
+++ b/bayes.ipynb
@@ -445,7 +445,7 @@
    "source": [
     "#### <div class=\"alert alert-info\">Exercise 1 (blob classification)</div>\n",
     "\n",
-    "Write function `blob_classification` that gets feature matrix X and label vector y as parameters. It should then return the accuracy score of the prediction. Do the prediction using `GaussianNB`, and use `train_test_split` function from `sklearn` to split the dataset in to two equal halves: one for training and one for testing. Give parameter `random_state=0` to the splitting function so that the result is deterministic. Use training set size of 75% of the whole data.\n",
+    "Write function `blob_classification` that gets feature matrix X and label vector y as parameters. It should then return the accuracy score of the prediction. Do the prediction using `GaussianNB`, and use `train_test_split` function from `sklearn` to split the dataset in to two parts: one for training and one for testing. Give parameter `random_state=0` to the splitting function so that the result is deterministic. Use training set size of 75% of the whole data.\n",
     "<hr/>"
    ]
   },
@@ -472,6 +472,8 @@
     "#### <div class=\"alert alert-info\">Exercise 3 (word classification)</div>\n",
     "\n",
     "This exercise can give four points at maximum!\n",
+    "\n",
+    "In this exercise we create a model that tries to label previously unseen words to be either Finnish or English.\n",
     "\n",
     "Part 1.\n",
     "\n",
@@ -510,12 +512,14 @@
    "source": [
     "#### <div class=\"alert alert-info\">Exercise 4 (spam detection)</div>\n",
     "\n",
+    "This exercise gives two points if solved correctly!\n",
+    "\n",
     "In the `src` folder there are two files: `ham.txt.gz` and `spam.txt.gz`. The files are preprocessed versions of the files from https://spamassassin.apache.org/old/publiccorpus/. There is one email per line. The file `ham.txt.gz` contains emails that are non-spam, and, conversely, emails in file `spam.txt` are spam. The email headers have been removed, except for the subject line, and non-ascii characters have been deleted.\n",
     "\n",
     "Write function `spam_detection` that does the following:\n",
     "\n",
-    "* reads these files. Use function `open` from `gzip` module, since the files are compressed. From each file take only `fraction` of reads from the start of the file, where `fraction` is a parameter to `spam_detection`, and should be in the range `[0.0, 1.0]`.\n",
-    "* forms the combined feature matrix using `CountVectorizer` class' `fit_transform` method.\n",
+    "* Read the lines from these files into arrays. Use function `open` from `gzip` module, since the files are compressed. From each file take only `fraction` of lines from the start of the file, where `fraction` is a parameter to `spam_detection`, and should be in the range `[0.0, 1.0]`.\n",
+    "* forms the combined feature matrix using `CountVectorizer` class' `fit_transform` method. The feature matrix should first have the rows for the `ham` dataset and then the rows for the `spam` dataset. One row in the feature matrix corresponds to one email.\n",
     "* use labels 0 for ham and 1 for spam\n",
     "* divide that feature matrix and the target label into training and test sets, using `train_test_split`. Use 75% of the data for training. Pass the random_state parameter from `spam_detection` to `train_test_split`.\n",
     "* train a `MultinomialNB` model, and use it to predict the labels for the test set\n",
