Changed order of coordinates in exs 3-6,3-7,3-8

--- a/numpy2.ipynb
+++ b/numpy2.ipynb
@@ -724,7 +724,7 @@
     "\n",
     "Example of usage:\n",
     "```\n",
-    "y, x = meeting_lines(a1, b1, a2, b2)\n",
+    "x, y = meeting_lines(a1, b1, a2, b2)\n",
     "```\n",
     "<hr/>"
    ]
@@ -741,7 +741,7 @@
     "\n",
     "Example of usage:\n",
     "```\n",
-    "z, y, x = meeting_planes(a1, b1, c1,  a2, b2, c2,  a3, b3, c3)\n",
+    "x, y, z = meeting_planes(a1, b1, c1,  a2, b2, c2,  a3, b3, c3)\n",
     "```\n",
     "<hr/>"
    ]
@@ -756,9 +756,9 @@
     "\n",
     "Example of usage:\n",
     "```\n",
-    "(y, x), exact = almost_meeting_lines(1, 2, -1, 0)\n",
-    "print(y, x, exact)\n",
-    "1.000000 -1.000000 True\n",
+    "(x, y), exact = almost_meeting_lines(1, 2, -1, 0)\n",
+    "print(x, y, exact)\n",
+    "-1.000000 1.000000 True\n",
     "```\n",
     "\n",
     "<hr/>"
@@ -791,7 +791,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
