w3 [15]: Made an example of fancy indexing clearer
Made an example of fancy indexing clearer by having an array with unique and unambigious values instead of an array with random and possibly repeating values.

--- a/numpy2.ipynb
+++ b/numpy2.ipynb
@@ -317,7 +317,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b=np.random.randint(0,10, (4,4))\n",
+    "b=np.arange(16).reshape(4,4)\n",
     "print(b)\n",
     "row=np.array([0,2])\n",
     "col=np.array([1,3])\n",
